--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "keywords": [
     "vscp",
     "iot",
+    "m2m",
+    "node-red",
     "automation"
   ],
   "author": "Ake Hedman, <akhe@grodansparadis.com> (https://www.vscp.org)",
@@ -28,15 +30,15 @@
   "dependencies": {
     "events": "^3.1.0",
     "net": "^1.0.2",
-    "node-vscp": "^1.0.19",
-    "util": "^0.12.1"
+    "node-vscp": "^1.1.12",
+    "util": "^0.12.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "mocha": "^7.0.1",
-    "node-vscp-class": "^1.0.4",
-    "node-vscp-type": "^1.0.4",
-    "npm-check-updates": "^4.0.1",
+    "mocha": "^7.1.0",
+    "node-vscp-class": "^1.0.6",
+    "node-vscp-type": "^1.0.6",
+    "npm-check-updates": "^4.0.4",
     "sleep": "^6.1.0"
   }
 }
